--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,7 +164,7 @@ pre {
 }
 
 main > div {
-  margin: 40px 16px;
+  margin: 0 16px;
 }
 
 input,
